jolie-newtypes/jolie/src/doc/choiceExtension_grammar.txt
This file contains a change of the formal grammar of the .ol input files of 
JOLIE. The change allows type definitions to consist of choices.
See the AUTHORS file for information regarding the authors of the JOLIE project.
See the COPYING file for the distribution license of the following content.

In order to allow choice types the following productions shall be 
replaced or added to the grammar:

 the grammar is extended with the following productions:

TypeDefinition ::= BasicType
		| NodeType { SubTypeList } .(. + { SubTypeList } .)*.
		| TypeDefinition + TypeDefinition
		| ...

SubTypeList 	::= SubTypeListElement SubTypeList 
		 | SubTypeListElement
		 
SubTypeListElement ::= SubType 
		 | ( SubTypeChoiceOption .(. + SubTypeChoiceOption .)+. )

SubType		::= ...

SubTypeChoiceOption	::= SubTypeListElement | ( SubTypeList )

NodeType	::= BasicType | ( BasicType .(. + BasicType .)+. )

BasicType	::= int | string | bool | ...


Notation notes for the productions: 
Something between dots, shall be interpreted as regex notation.
Three dots means, that the production is the same as in the original grammar.
