jolie-newtypes/libjolie/src/jolie/lang/parse/OLParser.java
/***************************************************************************
 *   Copyright (C) 2006-2009 by Fabrizio Montesi                           *
 *                                                                         *
 *   This program is free software; you can redistribute it and/or modify  *
 *   it under the terms of the GNU Library General Public License as       *
 *   published by the Free Software Foundation; either version 2 of the    *
 *   License, or (at your option) any later version.                       *
 *                                                                         *
 *   This program is distributed in the hope that it will be useful,       *
 *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
 *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
 *   GNU General Public License for more details.                          *
 *                                                                         *
 *   You should have received a copy of the GNU Library General Public     *
 *   License along with this program; if not, write to the                 *
 *   Free Software Foundation, Inc.,                                       *
 *   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
 *                                                                         *
 *   For details about the authors of this software, see the AUTHORS file. *
 ***************************************************************************/

package jolie.lang.parse;

import jolie.lang.parse.context.ParsingContext;
import java.io.BufferedInputStream;
import java.io.File;
import java.io.FileInputStream;
import java.io.FileNotFoundException;
import java.io.IOException;
import java.io.InputStream;
import java.net.MalformedURLException;
import java.net.URI;
import java.net.URISyntaxException;
import java.net.URL;
import java.util.*;
import jolie.lang.Constants;
import jolie.lang.NativeType;
import jolie.lang.parse.Scanner.Token;
import jolie.lang.parse.ast.AddAssignStatement;
import jolie.lang.parse.ast.expression.AndConditionNode;
import jolie.lang.parse.ast.AssignStatement;
import jolie.lang.parse.ast.CompareConditionNode;
import jolie.lang.parse.ast.CompensateStatement;
import jolie.lang.parse.ast.expression.ConstantIntegerExpression;
import jolie.lang.parse.ast.expression.ConstantDoubleExpression;
import jolie.lang.parse.ast.expression.ConstantStringExpression;
import jolie.lang.parse.ast.CorrelationSetInfo;
import jolie.lang.parse.ast.CorrelationSetInfo.CorrelationAliasInfo;
import jolie.lang.parse.ast.CorrelationSetInfo.CorrelationVariableInfo;
import jolie.lang.parse.ast.courier.CourierChoiceStatement;
import jolie.lang.parse.ast.CurrentHandlerStatement;
import jolie.lang.parse.ast.DeepCopyStatement;
import jolie.lang.parse.ast.DefinitionCallStatement;
import jolie.lang.parse.ast.DefinitionNode;
import jolie.lang.parse.ast.DivideAssignStatement;
import jolie.lang.parse.ast.EmbeddedServiceNode;
import jolie.lang.parse.ast.ExecutionInfo;
import jolie.lang.parse.ast.ExitStatement;
import jolie.lang.parse.ast.ForEachStatement;
import jolie.lang.parse.ast.ForStatement;
import jolie.lang.parse.ast.expression.FreshValueExpressionNode;
import jolie.lang.parse.ast.IfStatement;
import jolie.lang.parse.ast.InstallFixedVariableExpressionNode;
import jolie.lang.parse.ast.InstallFunctionNode;
import jolie.lang.parse.ast.InstallStatement;
import jolie.lang.parse.ast.expression.IsTypeExpressionNode;
import jolie.lang.parse.ast.LinkInStatement;
import jolie.lang.parse.ast.LinkOutStatement;
import jolie.lang.parse.ast.NDChoiceStatement;
import jolie.lang.parse.ast.expression.NotExpressionNode;
import jolie.lang.parse.ast.NotificationOperationStatement;
import jolie.lang.parse.ast.NullProcessStatement;
import jolie.lang.parse.ast.OLSyntaxNode;
import jolie.lang.parse.ast.OneWayOperationDeclaration;
import jolie.lang.parse.ast.OneWayOperationStatement;
import jolie.lang.parse.ast.expression.OrConditionNode;
import jolie.lang.parse.ast.OutputPortInfo;
import jolie.lang.parse.ast.ParallelStatement;
import jolie.lang.parse.ast.PointerStatement;
import jolie.lang.parse.ast.PostDecrementStatement;
import jolie.lang.parse.ast.PostIncrementStatement;
import jolie.lang.parse.ast.PreDecrementStatement;
import jolie.lang.parse.ast.PreIncrementStatement;
import jolie.lang.parse.ast.expression.ProductExpressionNode;
import jolie.lang.parse.ast.Program;
import jolie.lang.parse.ast.RequestResponseOperationDeclaration;
import jolie.lang.parse.ast.RequestResponseOperationStatement;
import jolie.lang.parse.ast.Scope;
import jolie.lang.parse.ast.SequenceStatement;
import jolie.lang.parse.ast.InputPortInfo;
import jolie.lang.parse.ast.InterfaceDefinition;
import jolie.lang.parse.ast.InterfaceExtenderDefinition;
import jolie.lang.parse.ast.SubtractAssignStatement;
import jolie.lang.parse.ast.MultiplyAssignStatement;
import jolie.lang.parse.ast.OperationCollector;
import jolie.lang.parse.ast.PortInfo;
import jolie.lang.parse.ast.SolicitResponseOperationStatement;
import jolie.lang.parse.ast.SpawnStatement;
import jolie.lang.parse.ast.expression.SumExpressionNode;
import jolie.lang.parse.ast.SynchronizedStatement;
import jolie.lang.parse.ast.ThrowStatement;
import jolie.lang.parse.ast.TypeCastExpressionNode;
import jolie.lang.parse.ast.UndefStatement;
import jolie.lang.parse.ast.ValueVectorSizeExpressionNode;
import jolie.lang.parse.ast.expression.VariableExpressionNode;
import jolie.lang.parse.ast.VariablePathNode;
import jolie.lang.parse.ast.VariablePathNode.Type;
import jolie.lang.parse.ast.WhileStatement;
import jolie.lang.parse.ast.courier.CourierDefinitionNode;
import jolie.lang.parse.ast.courier.NotificationForwardStatement;
import jolie.lang.parse.ast.courier.SolicitResponseForwardStatement;
import jolie.lang.parse.ast.expression.*;
import jolie.lang.parse.ast.types.TypeChoiceDefinition;
import jolie.lang.parse.ast.types.TypeDefinition;
import jolie.lang.parse.ast.types.TypeDefinitionLink;
import jolie.lang.parse.ast.types.TypeDefinitionUndefined;
import jolie.lang.parse.ast.types.TypeInlineDefinition;
import jolie.lang.parse.context.URIParsingContext;
import jolie.util.Pair;
import jolie.util.Range;

/** Parser for a .ol file. 
 * @author Fabrizio Montesi
 *
 */
public class OLParser extends AbstractParser
{
	private final Program program;
	private final Map< String, Scanner.Token > constantsMap =
		new HashMap< String, Scanner.Token >();
	private boolean insideInstallFunction = false;
	private String[] includePaths;
	private final Map< String, InterfaceDefinition > interfaces =
		new HashMap< String, InterfaceDefinition >();
	private final Map< String, InterfaceExtenderDefinition > interfaceExtenders =
		new HashMap< String, InterfaceExtenderDefinition >();

	private final Map< String, TypeDefinition > definedTypes;
	private final ClassLoader classLoader;
	
	private InterfaceExtenderDefinition currInterfaceExtender = null;
	
	public OLParser( Scanner scanner, String[] includePaths, ClassLoader classLoader )
	{
		super( scanner );
		ParsingContext context = new URIParsingContext( scanner.source(), 0 );
		this.program = new Program( context );
		this.includePaths = includePaths;
		this.classLoader = classLoader;
		this.definedTypes = createTypeDeclarationMap( context );
	}

	public void putConstants( Map< String, Scanner.Token > constantsToPut )
	{
		constantsMap.putAll( constantsToPut );
	}

	public static Map< String, TypeDefinition > createTypeDeclarationMap( ParsingContext context )
	{
		Map< String, TypeDefinition > definedTypes = new HashMap< String, TypeDefinition >();

		// Fill in defineTypes with all the supported native types (string, int, double, ...)
		for( NativeType type : NativeType.values() ) {
			definedTypes.put( type.id(), new TypeInlineDefinition( context, type.id(), type, Constants.RANGE_ONE_TO_ONE ) );
		}
		definedTypes.put( TypeDefinitionUndefined.UNDEFINED_KEYWORD, TypeDefinitionUndefined.getInstance() );
		
		return definedTypes;
	}

	public Program parse()
		throws IOException, ParserException
	{
		_parse();

		if ( initSequence != null ) {
			program.addChild( new DefinitionNode( getContext(), "init", initSequence ) );
		}

		if ( main != null ) {
			program.addChild( main );
		}

		return program;
	}

	private void _parse()
		throws IOException, ParserException
	{
		getToken();
		Scanner.Token t;
		do {
			t = token;
			parseInclude();
			parseConstants();
			parseInclude();
			parseExecution();
			parseInclude();
			parseCorrelationSets();
			parseInclude();
			parseTypes();
			parseInclude();
			parseInterfaceOrPort();
			parseInclude();
			parseEmbedded();
			parseInclude();
			parseCode();
		} while( t != token );

		if ( t.isNot( Scanner.TokenType.EOF ) ) {
			throwException( "Invalid token encountered" );
		}
	}

	private void parseTypes()
		throws IOException, ParserException
	{		
		String typeName;
		TypeDefinition currentType;

		program.addChild( TypeDefinitionUndefined.getInstance() );

		while( token.isKeyword( "type" ) ) {
			getToken();
			typeName = token.content();
			eat( Scanner.TokenType.ID, "expected type name" );
			eat( Scanner.TokenType.COLON, "expected COLON (cardinality not allowed in root type declaration, it is fixed to [1,1])" );
			currentType = parseTypeDefinition( Constants.RANGE_ONE_TO_ONE );
			currentType.setId( typeName );
			/*
			if ( token.is( Scanner.TokenType.PLUS ) ) { //The type is a choice between several type definitions.
				List< List < TypeDefinition > > options = new ArrayList< List < TypeDefinition > >();
				options.add( new ArrayList< TypeDefinition >() );
				int index = 0;
				options.get( index ).add( currentType );
				
				while( token.is( Scanner.TokenType.PLUS ) ) {
					getToken();
					options.add( new ArrayList< TypeDefinition >() );
					index++;
					options.get( index ).add( parseTypeDefinition( Constants.RANGE_ONE_TO_ONE ) );
				}
				currentType = new TypeChoiceDefinition(getContext(), typeName, options);
			} else {
				currentType.setId(typeName);
			} 
			*/ 
			
			
			// Keep track of the root types to support them in successive type declarations
			definedTypes.put( typeName, currentType );
			program.addChild( currentType );
		}
	}
		
	/**
	 * Parses shortcut for choice types where each option has identical 
	 * sub types.
	 * @return choice type 
	 * @throws IOException
	 * @throws ParserException
	 * @author Julie Meinicke Nielsen
	 */
//	private TypeChoiceDefinition parseNativeTypeChoice()
//			throws IOException, ParserException
//	{
//		List <TypeDefinition> types = new LinkedList< TypeDefinition >();
//		List < ParsingContext > contexts = new ArrayList< ParsingContext >();
//		List < NativeType > nativeTypes = new ArrayList< NativeType >();
//		
//		do {
//			getToken();
//			contexts.add( getContext() );
//			nativeTypes.add( readNativeType() );
//			getToken();
//		} while( token.is( Scanner.TokenType.PLUS ) );
//
//		/* Check whether the parentheses around the native types, are part of 
//		   a choice (if not, it is not valid according to the grammar) */
//		if ( contexts.size() < 2 ) { 
//			throwException( "PLUS expected" );
//		}
//		
//		eat( Scanner.TokenType.RPAREN, "RPAREN expected" );
//		TypeDefinition template = parseSubTypes( contexts.get(0), nativeTypes.get(0), Constants.RANGE_ONE_TO_ONE );
//
//		types.add(template);
//		if ( template instanceof TypeInlineDefinition ) {
//			TypeInlineDefinition option;
//			
//			for ( int i=1 ; i < contexts.size() ; i++ ) {
//				option = new TypeInlineDefinition( contexts.get(i), nativeTypes.get(i), Constants.RANGE_ONE_TO_ONE );
//				if ( ( (TypeInlineDefinition)template ).untypedSubTypes() ) {
//					option.setUntypedSubTypes( true );
//				} else {
//					for( Map.Entry< String, TypeDefinition > entry : ( (TypeInlineDefinition)template ).subTypes() ) {
//						option.putSubType( entry.getValue().copy() );
//					}
//				}
//				types.add(option);
//			}
//		} else { //template is a typeDefinitionChoice.
//			TypeInlineDefinition missingOption;
//			List< TypeDefinition > templateOptions = ( (TypeChoiceDefinition)template ).options();
//			
//			//Create options equivalent to template's options but with the remaining native types
//			for ( int i=1 ; i < contexts.size() ; i++ ) {
//				for ( TypeDefinition templateOption : templateOptions ) {
//					missingOption = new TypeInlineDefinition( contexts.get(i), nativeTypes.get(i), templateOption.cardinality() );
//					if ( ( (TypeInlineDefinition)templateOption ).untypedSubTypes() ) {
//						missingOption.setUntypedSubTypes( true );
//					} else {
//						for( Map.Entry< String, TypeDefinition > entry : ( (TypeInlineDefinition)templateOption ).subTypes() ) {
//							missingOption.putSubType( entry.getValue().copy() );
//						}
//					}
//					types.add( missingOption );
//				}
//			}
//		}
//		return new TypeChoiceDefinition( getContext(), types );
//	}
	
	
	private List < NativeType > parseNativeTypes()
			throws IOException, ParserException
	{
		List < NativeType > nativeTypes = new ArrayList< NativeType >();
		
		if ( token.type() == Scanner.TokenType.LPAREN ) { //It's a choice consisting of types with same sub-types
			NativeType nativeType;
			getToken(); //token is LPAREN
			nativeType = readNativeType();
			if ( nativeType == null ) { //user defined types are not allowed
				throwException( "expected a native type, found: " + token.content() );
			} else {
				nativeTypes.add( nativeType );
				getToken(); //token is a native type
			}
			do {
				eat( Scanner.TokenType.PLUS, "expected +" );
				NativeType additionalNativeType;
				additionalNativeType = readNativeType();
				if ( additionalNativeType == null ) { //user defined types are not allowed
					throwException( "expected a native type, found: " + token.content() );
				} else {
					nativeTypes.add( additionalNativeType );
					getToken(); //token is a native type
				}
			} while( token.is( Scanner.TokenType.PLUS ) );
			eat( Scanner.TokenType.RPAREN, "expected )" );
			
		} else {
			NativeType nativeType = readNativeType();
			if ( nativeType != null ) {
				nativeTypes.add( readNativeType() );
			}
		}
		return nativeTypes;
	}
	
	private TypeDefinition createTypeFromTypeDefinition ( List < List < TypeDefinition > > subTypes, boolean untypedSubTypes,
			List < NativeType > nativeTypes, String userDefinedType )
	{
		if ( nativeTypes == null ) { // It's a user-defined type
			return new TypeDefinitionLink( getContext(), null, Constants.RANGE_ONE_TO_ONE, userDefinedType );
		} else if ( nativeTypes.size() == 1 ) { // ... NT ?
			TypeInlineDefinition inline = new TypeInlineDefinition( getContext(), null, nativeTypes.get( 0 ), Constants.RANGE_ONE_TO_ONE );
			if ( untypedSubTypes == true ) { //It's an inline with untyped sub-types
				inline.setUntypedSubTypes( true );
			} else {
				if ( subTypes.size() < 2 ) {
					if (subTypes.size() == 1 ) { // It has sub-types
						for ( TypeDefinition subType : subTypes.get( 0 ) ) {
							inline.putSubType( subType );
						}
					}
				} else { //It's a choice
					inline.putSubType( new TypeChoiceDefinition( getContext(), null, subTypes ) );
				}
			}
			return inline;
		} else { //... ( ... ) { ... } ...
			List < List < TypeDefinition > > options = new ArrayList < List < TypeDefinition > >();
			List< TypeDefinition > oneElementList;
			if ( untypedSubTypes == true ) { //It has untyped sub-types
				for ( NativeType nativeType : nativeTypes ) {
					TypeInlineDefinition inline = new TypeInlineDefinition( getContext(), null, nativeType, Constants.RANGE_ONE_TO_ONE );
					inline.setUntypedSubTypes( true );
					oneElementList = new ArrayList< TypeDefinition >();
					oneElementList.add( inline );
					options.add( oneElementList );
				}
			} else {
				boolean hasSingleSetOfSubTypes = false;
				if ( subTypes.size() == 1 ) {
					if (subTypes.get( 0 ) != null ) { // It has sub-types
						for ( NativeType nativeType : nativeTypes ) {
							TypeInlineDefinition inline = new TypeInlineDefinition( getContext(), null, nativeType, Constants.RANGE_ONE_TO_ONE );
							for ( TypeDefinition subType : subTypes.get( 0 ) ) {
								inline.putSubType( subType );
							}
							oneElementList = new ArrayList< TypeDefinition >();
							oneElementList.add( inline );
							options.add( oneElementList );
						}
					} else { //It doesn't have sub-types
						for ( NativeType nativeType : nativeTypes ) {
							TypeInlineDefinition inline = new TypeInlineDefinition( getContext(), null, nativeType, Constants.RANGE_ONE_TO_ONE );
							oneElementList = new ArrayList< TypeDefinition >();
							oneElementList.add( inline );
							options.add( oneElementList );
						}
					}
				} else { //It's a choice
					for ( NativeType nativeType : nativeTypes ) {
						TypeInlineDefinition inline = new TypeInlineDefinition( getContext(), null, nativeType, Constants.RANGE_ONE_TO_ONE );
						inline.putSubType( new TypeChoiceDefinition( getContext(), null, subTypes ) );
						oneElementList = new ArrayList< TypeDefinition >();
						oneElementList.add( inline );
						options.add( oneElementList );
					}
				}
			}
			return new TypeChoiceDefinition( getContext(), null, options );
		}
	}
	
	
	private TypeDefinition parseTypeDefinition( Range cardinality )
			throws IOException, ParserException
	{
		List < TypeDefinition > typeDefinitions = new ArrayList < TypeDefinition >();
		List < List < TypeDefinition > > subTypes = new ArrayList < List < TypeDefinition > >();
		boolean untypedSubTypes = false;
		List < NativeType > nativeTypes;
		String userDefinedType = "";
		
		nativeTypes = parseNativeTypes();
		
		
		if ( nativeTypes.size() == 1 ) { //There is one native type and it might have sub-types
			getToken(); //Token is native type
			if ( token.is( Scanner.TokenType.LCURLY ) ) { // We have sub-types to parse
				List < TypeDefinition > parsedSubTypes = parseSubTypes();
				if ( parsedSubTypes == null ) { //It has untyped sub-types
					untypedSubTypes = true;
				} else {
					subTypes.add( parsedSubTypes );
				}
			}
		} else if ( nativeTypes.size() > 1 ) { //It has several native types in parenthes, and sub-types are therefore required.
			List < TypeDefinition > parsedSubTypes = parseSubTypes();
			if ( parsedSubTypes == null ) { //It has untyped sub-types
				untypedSubTypes = true;
			} else {
				subTypes.add( parsedSubTypes );
			}
		} else { // It's a user-defined type
			userDefinedType = token.content();
			getToken();
			if ( token.is( Scanner.TokenType.LCURLY ) ) {
				throwException( "can't add new sub-types to already defined type, " + userDefinedType );
			}
		}
		
		while ( token.type() == Scanner.TokenType.PLUS ) { //... { ... } + ?
			
			//if ( lookAhead().token.type() == Scanner.TokenType.LCURLY ) { // We have encountered next option and are therefore finish with parsing this option
			getToken(); //get PLUS
			if ( token.type() == Scanner.TokenType.DOT ) { //Next sub-type in sub-type list.
				addTokens( Arrays.asList(
						new Scanner.Token( Scanner.TokenType.PLUS ),
						new Scanner.Token( Scanner.TokenType.DOT )
						) ); //it was only a look ahead.
				getToken();
				break; //finish up and return the parsed sub-type
			} else if ( token.type() == Scanner.TokenType.LPAREN ) {
				getToken(); //get LPAREN
				if ( token.type() == Scanner.TokenType.DOT || token.type() == Scanner.TokenType.LPAREN ) { //Next sub-type in sub-type list.
					addTokens( Arrays.asList(
							new Scanner.Token( Scanner.TokenType.PLUS ),
							new Scanner.Token( Scanner.TokenType.LPAREN ),
							token
							) ); //it was only a look ahead.
					getToken(); //get DOT or LPAREN
					break; //finish up and return the parsed sub-type
				} else { //it is next option in this type definition
					addTokens( Arrays.asList(
							new Scanner.Token( Scanner.TokenType.LPAREN ),
							token
							) ); //it was only a look ahead.
					getToken(); //get DOT or LPAREN
					
					typeDefinitions.add( createTypeFromTypeDefinition( subTypes, untypedSubTypes, nativeTypes, userDefinedType ) );
					
					//Make ready to parse next type definition
					untypedSubTypes = false;
					userDefinedType = "";
					subTypes = new ArrayList < List < TypeDefinition > >();
					
					//Parse next typeDefinition
					nativeTypes = parseNativeTypes();
					
					if ( nativeTypes == null ) { // It's a user-defined type
						userDefinedType = token.content();
						getToken();
						if ( token.is( Scanner.TokenType.LCURLY ) ) {
							throwException( "can't add new sub-types to already defined type, " + userDefinedType );
						}
					} else if ( nativeTypes.size() == 1 ) { //There is one native type and it might have sub-types
						TypeDefinition currentType;
						//ParsingContext context = getContext();
						getToken();
						if ( token.is( Scanner.TokenType.LCURLY ) ) { // We have sub-types to parse
							List < TypeDefinition > parsedSubTypes = parseSubTypes();
							if ( parsedSubTypes == null ) { //It has untyped sub-types
								untypedSubTypes = true;
							} else {
								subTypes.add( parsedSubTypes );
							}
						}
					} else if ( nativeTypes.size() > 1 ) { //It has several native types in parenthes, and sub-types are therefore required.
						List < TypeDefinition > parsedSubTypes = parseSubTypes();
						if ( parsedSubTypes == null ) { //It has untyped sub-types
							untypedSubTypes = true;
						} else {
							subTypes.add( parsedSubTypes );
						}
						
					}
				}
			} else { //We are not done parsing this type definition
				
				if ( token.type() == Scanner.TokenType.LCURLY ) { //... { ... } + { ... } ...
					if ( untypedSubTypes == false ) {
						if ( subTypes.isEmpty() ) { //Not valid syntax: type t : NT + { ... }
							throwException( "Missing native type between plus and sub-types" );
						} else {
							List < TypeDefinition > parsedSubTypes = parseSubTypes();
							if ( parsedSubTypes == null ) { //It has untyped sub-types
								untypedSubTypes = true;
							} else {
								subTypes.add( parsedSubTypes );
							}
						}
					} else { //It has untyped sub-types
						parseSubTypes(); //Sub-types are only parsed to check the syntax.
					}
				} else { //... { ... } + TypeDefinition
					typeDefinitions.add( createTypeFromTypeDefinition( subTypes, untypedSubTypes, nativeTypes, userDefinedType ) );
					
					//Make ready to parse next type definition
					untypedSubTypes = false;
					userDefinedType = "";
					subTypes = new ArrayList < List < TypeDefinition > >();
					
					//Parse next typeDefinition
					nativeTypes = parseNativeTypes();
					
					if ( nativeTypes.isEmpty() ) { // It's a user-defined type
						userDefinedType = token.content();
						getToken();
						if ( token.is( Scanner.TokenType.LCURLY ) ) {
							throwException( "can't add new sub-types to already defined type, " + userDefinedType );
						}
					} else if ( nativeTypes.size() == 1 ) { //There is one native type and it might have sub-types
						TypeDefinition currentType;
						//ParsingContext context = getContext();
						getToken();
						if ( token.is( Scanner.TokenType.LCURLY ) ) { // We have sub-types to parse
							List < TypeDefinition > parsedSubTypes = parseSubTypes();
							if ( parsedSubTypes == null ) { //It has untyped sub-types
								untypedSubTypes = true;
							} else {
								subTypes.add( parsedSubTypes );
							}
						}
					} else if ( nativeTypes.size() > 1 ) { //It has several native types in parenthes, and sub-types are therefore required.
						List < TypeDefinition > parsedSubTypes = parseSubTypes();
						if ( parsedSubTypes == null ) { //It has untyped sub-types
							untypedSubTypes = true;
						} else {
							subTypes.add( parsedSubTypes );
						}
					}
				}
			}
		}
		//Finish up
		
		//Create type from the last parsed type definition.
		typeDefinitions.add( createTypeFromTypeDefinition( subTypes, untypedSubTypes, nativeTypes, userDefinedType ) );
		
		//Create the final type
		if ( typeDefinitions.size() == 1 ) { //the type consist of one type definition
			return typeDefinitions.get( 0 );
		} else { //The type is a choice between several type definitions
			List < List < TypeDefinition > > options = new ArrayList < List < TypeDefinition > >();
			List < TypeDefinition > OneElementList;
			for ( TypeDefinition type : typeDefinitions ) {
				OneElementList = new ArrayList< TypeDefinition >();
				OneElementList.add( type );
				options.add( OneElementList );
			}
			return new TypeChoiceDefinition( getContext(), null, options );
		}
	}
	
	
	private NativeType readNativeType()
	{
		if ( token.is( Scanner.TokenType.CAST_INT ) ) {
			return NativeType.INT;
		} else if ( token.is( Scanner.TokenType.CAST_DOUBLE ) ) {
			return NativeType.DOUBLE;
		} else if ( token.is( Scanner.TokenType.CAST_STRING ) ) {
			return NativeType.STRING;
		} else if ( token.is( Scanner.TokenType.CAST_LONG ) ) {
			return NativeType.LONG;
		} else if ( token.is( Scanner.TokenType.CAST_BOOL ) ) {
			return NativeType.BOOL;
		} else {
			return NativeType.fromString( token.content() );
		}
	}

	/**
	 * Parse the sub types by converting the list structure returned by
	 * parseSubTypeList to type definitions.
	 * @param context
	 * @param nativeType
	 * @param cardinality
	 * @return a type with sub types
	 * @throws IOException
	 * @throws ParserException 
	 * July 2012, Julie Meinicke Nielsen: Changed it to handle the output from parseSubTypeList.
	 */
	private List< TypeDefinition > parseSubTypes( )
			throws IOException, ParserException
	{
		//TypeDefinition currentType;
		
		eat( Scanner.TokenType.LCURLY, "expected {" );
		
		if ( token.is( Scanner.TokenType.RCURLY ) ) { //Zero sub-types are not allowed
			throwException("sub-type syntax error (dot not found)");
		}
		if ( token.is( Scanner.TokenType.QUESTION_MARK ) ) { //undefined sub types
			getToken(); //Token is question mark
			eat( Scanner.TokenType.RCURLY, "expected }" );
			return null;
		} else { //parse sub types
			return parseSubTypeList( false, new ArrayList< String >() );
			
			//			int optionsAmount;
			//			List< List< TypeDefinition > > options =
			//					parseSubTypeList( context, nativeType, cardinality, new LinkedList< String >(), false );
			//
			//			optionsAmount = options.size();
			//			 if ( optionsAmount == 1 ) { //inline type
			//				TypeInlineDefinition inlineType = new TypeInlineDefinition(context, nativeType, cardinality);
			//				for ( TypeDefinition subType : options.get(0) ) {
			//					inlineType.putSubType(subType);
			//				}
			//				currentType = inlineType;
			//			} else { //choice type
			//				List< TypeDefinition > optionTypes = new LinkedList<TypeDefinition>();
			//				for ( List< TypeDefinition > option : options ) {
			//					TypeInlineDefinition optionType = new TypeInlineDefinition(context, nativeType, cardinality);
			//					for ( TypeDefinition subType : option ) {
			//						optionType.putSubType( subType );
			//					}
			//					optionTypes.add(optionType);
			//				}
			//				TypeChoiceDefinition choiceType = new TypeChoiceDefinition(context, cardinality, optionTypes);
			//				currentType = choiceType;
			//			}
		}
	}
	
    /**
	 * Parse recursively sub types
	 * @param context
	 * @param nativeType
	 * @param cardinality
	 * @param usedIds
	 * @param insideParentheses
	 * @return A list of sub types, where each sub type is represented as a
	 * list of its sub types and so on.
	 * @throws IOException
	 * @throws ParserException
	 * @author Julie Meinicke Nielsen
	 */
	private List< TypeDefinition >  parseSubTypeList( boolean insideParentheses, List< String > usedIds )
			throws ParserException, IOException
	{
		Scanner.TokenType end;
		List< TypeDefinition > subTypes;
		
		if ( insideParentheses ) {
			end = Scanner.TokenType.RPAREN;
		} else {
			end = Scanner.TokenType.RCURLY;
		}
		//Parse subTypes one by one.
		subTypes = new ArrayList< TypeDefinition >();
		do {
			subTypes.add( parseSubTypeListElement( usedIds ) );
		} while( token.is( end )==false );
		getToken(); //get end token
		return subTypes;
	}
	
	/**
	 * 
	 * @param context
	 * @return
	 * @throws ParserException
	 * @throws IOException 
	 */
	private TypeDefinition parseSubTypeListElement( List< String > usedIds )
			throws ParserException, IOException
	{
		List< List< TypeDefinition > > options;
		
		if ( token.is( Scanner.TokenType.LPAREN ) ) {
			eat( Scanner.TokenType.LPAREN, "expected (" );
			options = new ArrayList< List< TypeDefinition > >();
			options.add( parseSubTypeChoiceOption( usedIds ) );
			while ( token.is( Scanner.TokenType.PLUS ) ) {
				eat( Scanner.TokenType.PLUS, "expected +" );
				options.add( parseSubTypeChoiceOption( usedIds ) );
			}
			eat( Scanner.TokenType.RPAREN, "expected )" );
			return new TypeChoiceDefinition(getContext(), null, options);
		} else { //It's a subtype (if not, then an error is thrown from parseSubType)
			return parseSubType( usedIds );
		}
	}
	
	//		
//		if ( token.is( Scanner.TokenType.LPAREN ) ) {
//			eat( Scanner.TokenType.LPAREN, "expected (" );
//			options = parseSubTypeList( getContext(), nativeType, cardinality, usedIds, true );
//		} else {
//			subType = parseSubType();
//			if ( usedIds.contains( subType.id() ) ) {
//				throwException( "sub-type " + subType.id() + " conflicts with another sub-type with the same name" );
//			}
//			options = new LinkedList<List<TypeDefinition>>();
//			options.add(new LinkedList<TypeDefinition>());
//			options.get(0).add(subType);
//		}
//		while( token.is( end )==false ) {
//			currentOptions = new LinkedList<List<TypeDefinition>>();
//			if ( token.is( Scanner.TokenType.PLUS ) ) { //The type is a choice between several types.
//				getToken();
//				if ( token.is( Scanner.TokenType.LPAREN ) ) {
//					eat( Scanner.TokenType.LPAREN, "expected (" );
//					currentOptions = parseSubTypeList( getContext(), nativeType, cardinality, usedIds, true );
//					for ( List< TypeDefinition > currentOption : currentOptions ) {
//						options.add(currentOption);
//					}
//				} else {
//					currentSubType = parseSubType();
//					if ( usedIds.contains( currentSubType.id() ) ) {
//						throwException( "sub-type " + currentSubType.id() + " conflicts with another sub-type with the same name" );
//					}
//					List< TypeDefinition > currentOption = new LinkedList< TypeDefinition >();
//					currentOption.add(currentSubType);
//					options.add(currentOption);
//				}
//			} else {
//				if ( token.is( Scanner.TokenType.LPAREN ) ) {
//					eat( Scanner.TokenType.LPAREN, "expected (" );
//					currentOptions = parseSubTypeList( getContext(), nativeType, cardinality, usedIds, true );
//					List< List< TypeDefinition > > newOptions = new LinkedList< List< TypeDefinition > >();
//					List< TypeDefinition > newOption;
//					for ( List< TypeDefinition > currentOption : currentOptions ) {
//						for ( List< TypeDefinition > option : options ) {
//							newOption = new LinkedList<TypeDefinition>();
//							for ( TypeDefinition type : option ) {
//								newOption.add(type);
//							}
//							for ( TypeDefinition type : currentOption ) {
//								newOption.add(type);
//							}
//							//newOption.add(option);
//							//newOption.add(currentOption);
//							newOptions.add(newOption);
//						}
//					}
//					options = newOptions;
//				} else {
//					currentSubType = parseSubType();
//					if ( usedIds.contains( currentSubType.id() ) ) {
//						throwException( "sub-type " + currentSubType.id() + " conflicts with another sub-type with the same name" );
//					}
//					for ( List< TypeDefinition > option : options ) {
//						option.add(currentSubType);
//					}
//				}
//			}
//		}
//		eat( end, endMsg );
//		return options;
//	}
	
	/**
	 *
	 */
	private List< TypeDefinition > parseSubTypeChoiceOption( List< String > usedIds )
			throws ParserException, IOException
	{
		List< TypeDefinition > elements;
		List< List< TypeDefinition > > options;
		TypeDefinition choice;
		List< TypeDefinition > typeDefinitions;
		
		if ( token.is( Scanner.TokenType.LPAREN ) ) {
			eat( Scanner.TokenType.LPAREN, "expected (" );
			elements = parseSubTypeChoiceOption( usedIds );
			if ( token.is( Scanner.TokenType.PLUS ) ) { //It's a choice
				options = new LinkedList< List< TypeDefinition > >();
				options.add( elements );
				while ( token.isNot( Scanner.TokenType.RPAREN ) ) {
					eat( Scanner.TokenType.PLUS, "expected +" );
					options.add( parseSubTypeChoiceOption( usedIds ) );
				}
				eat( Scanner.TokenType.RPAREN, "expected )" );
				choice = new TypeChoiceDefinition( getContext(), null, options );
				typeDefinitions = new LinkedList < TypeDefinition >();
				typeDefinitions.add( choice );
				return typeDefinitions;
			} else { //It's a sub-type list
				typeDefinitions = parseSubTypeList( true, usedIds );
				if ( elements.size() > 1 ) {
